using System.Text;
using PlayHouse.Core.Api.Bootstrap;
using PlayHouse.Core.Play.Bootstrap;
using PlayHouse.Core.Shared;
using PlayHouse.E2E.Shared.Proto;
using PlayHouse.E2E.Shared.Utils;

namespace PlayHouse.E2E;

class Program
{
    static async Task<int> Main(string[] args)
    {
        var config = ParseArguments(args);

        // ğŸ”¥ ì„œë²„/í´ë¼ì´ì–¸íŠ¸ í•œ ë²ˆë§Œ ì‹œì‘
        var serverContext = await StartServersAsync();

        try
        {
            if (config.InteractiveMode)
                return await RunInteractiveMode(serverContext);
            else if (config.Category != null)
                return await RunSelectedCategories(config, serverContext);
            else
                return await RunAllTests(config, serverContext);
        }
        finally
        {
            // ğŸ”¥ í”„ë¡œê·¸ë¨ ì¢…ë£Œ ì‹œ í•œ ë²ˆë§Œ ì •ë¦¬
            await StopServersAsync(serverContext);
        }
    }

    static async Task<ServerContext> StartServersAsync()
    {
        Console.WriteLine("[ì„œë²„ ì‹œì‘ ì¤‘...]");

        // í™˜ê²½ ë³€ìˆ˜ë¡œ DI ëª¨ë“œ í™œì„±í™”
        var enableDI = Environment.GetEnvironmentVariable("ENABLE_DI_TESTS") == "1";
        var enableProtocolTests = Environment.GetEnvironmentVariable("ENABLE_PROTOCOL_TESTS") == "1";

        // ZMQ í¬íŠ¸ ë™ì  í• ë‹¹ (CI í™˜ê²½ ì¶©ëŒ ë°©ì§€)
        var zmqPortOffset = int.Parse(Environment.GetEnvironmentVariable("ZMQ_PORT_OFFSET") ?? "0");
        var zmqPlayPort = 15000 + zmqPortOffset;
        var zmqApi1Port = 15300 + zmqPortOffset;
        var zmqApi2Port = 15301 + zmqPortOffset;
        var zmqDIPort = 15100 + zmqPortOffset;
        var zmqTlsPort = 15200 + zmqPortOffset;
        var zmqWsPort = 15400 + zmqPortOffset;

        // 1. PlayServer (TCP ë™ì , ZMQ ë™ì )
        var playServer = await ServerFactory.CreatePlayServerAsync(
            serverId: "play-1",
            tcpPort: 0,
            zmqPort: zmqPlayPort
        );
        var actualTcpPort = playServer.ActualTcpPort;
        Console.WriteLine($"âœ“ PlayServer started on ZMQ:{zmqPlayPort}, TCP:{actualTcpPort}");

        // 2. ApiServer 2ê°œ (ì„œë²„ê°„ í†µì‹  í…ŒìŠ¤íŠ¸ìš©)
        var (apiServer1, httpApp, httpPort) = await ServerFactory.CreateApiServerWithHttpAsync(
            serverId: "api-1",
            zmqPort: zmqApi1Port,
            playServerId: "play-1"
        );
        var apiServer2 = await ServerFactory.CreateApiServerAsync(
            serverId: "api-2",
            zmqPort: zmqApi2Port
        );
        Console.WriteLine($"âœ“ ApiServer-1 started on ZMQ:{zmqApi1Port}, HTTP:{httpPort}");
        Console.WriteLine($"âœ“ ApiServer-2 started on ZMQ:{zmqApi2Port}");

        // ğŸ”¥ ApiServer ì–‘ë°©í–¥ ì—°ê²° ëŒ€ê¸° (ì´ˆê¸° ì•ˆì •í™” ì‹œê°„ + ë¹ ë¥¸ í—¬ìŠ¤ì²´í¬)
        await Task.Delay(3000); // ì´ˆê¸° ì•ˆì •í™” ì‹œê°„ (ZMQ ì—°ê²° ì™„ë£Œ ëŒ€ê¸°)
        await WaitForApiServerConnectionAsync(apiServer1, apiServer2);

        // 3. DI PlayServer (ì¡°ê±´ë¶€)
        PlayServer? diPlayServer = null;
        IServiceProvider? diServiceProvider = null;
        int diTcpPort = 0;

        if (enableDI)
        {
            (diPlayServer, diServiceProvider) = await ServerFactory.CreateDIPlayServerAsync(
                serverId: "di-1",
                tcpPort: 0,
                zmqPort: zmqDIPort
            );
            diTcpPort = diPlayServer.ActualTcpPort;
            Console.WriteLine($"âœ“ DI PlayServer started on ZMQ:{zmqDIPort}, TCP:{diTcpPort}");

            // DI ì„œë²„ ì¶”ê°€ í›„ ApiServer ì—°ê²° ì¬í™•ì¸
            await Task.Delay(2000);
            await WaitForApiServerConnectionAsync(apiServer1, apiServer2);
        }

        // 4. í”„ë¡œí† ì½œ í…ŒìŠ¤íŠ¸ìš© ì„œë²„ (ì¡°ê±´ë¶€)
        PlayServer? tlsPlayServer = null;
        int tcpTlsPort = 0;
        PlayServer? wsPlayServer = null;
        Microsoft.AspNetCore.Builder.WebApplication? wsHttpApp = null;
        int wsPort = 0;

        if (enableProtocolTests)
        {
            // TCP + TLS ì„œë²„
            tlsPlayServer = await ServerFactory.CreatePlayServerWithTlsAsync(
                serverId: "tls-1",
                tcpPort: 0,
                zmqPort: zmqTlsPort
            );
            tcpTlsPort = tlsPlayServer.ActualTcpPort;
            Console.WriteLine($"âœ“ TLS PlayServer started on ZMQ:{zmqTlsPort}, TCP+TLS:{tcpTlsPort}");

            // WebSocket ì„œë²„
            (wsPlayServer, wsHttpApp, wsPort) = await ServerFactory.CreatePlayServerWithWebSocketAsync(
                serverId: "ws-1",
                zmqPort: zmqWsPort
            );
            Console.WriteLine($"âœ“ WebSocket PlayServer started on ZMQ:{zmqWsPort}, HTTP:{wsPort}");
        }

        // 5. í´ë¼ì´ì–¸íŠ¸ ìƒì„± (í•œ ë²ˆë§Œ!)
        var connector = new PlayHouse.Connector.Connector();
        connector.Init(new PlayHouse.Connector.ConnectorConfig
        {
            RequestTimeoutMs = 30000
        });
        Console.WriteLine($"âœ“ Client connector initialized\n");

        return new ServerContext
        {
            PlayServer = playServer,
            ApiServer1 = apiServer1,
            ApiServer2 = apiServer2,
            HttpApp = httpApp,
            Connector = connector,
            TcpPort = actualTcpPort,
            ApiServer1HttpPort = httpPort,
            PlayServerId = "play-1",
            ApiServer1Id = "api-1",
            ApiServer2Id = "api-2",
            DIPlayServer = diPlayServer,
            DIServiceProvider = diServiceProvider,
            DITcpPort = diTcpPort,
            // í”„ë¡œí† ì½œ í…ŒìŠ¤íŠ¸ìš©
            TcpTlsPort = tcpTlsPort,
            WebSocketPort = wsPort,
            TlsPlayServer = tlsPlayServer,
            WebSocketPlayServer = wsPlayServer,
            WebSocketHttpApp = wsHttpApp
        };
    }

    static async Task WaitForApiServerConnectionAsync(ApiServer s1, ApiServer s2)
    {
        // ApiServer ì–‘ë°©í–¥ ì—°ê²° í—¬ìŠ¤ì²´í¬ (ìµœëŒ€ 2ì´ˆ, ë¹ ë¥¸ ì¬ì‹œë„)
        const int maxAttempts = 10; // 10íšŒ * 200ms = 2ì´ˆ
        bool s1ToS2 = false, s2ToS1 = false;

        for (int attempt = 1; attempt <= maxAttempts; attempt++)
        {
            if (!s1ToS2)
            {
                try
                {
                    var req = new ApiEchoRequest { Content = "HealthCheck" };
                    var res = await s1.ApiSender!.RequestToApi("api-2", CPacket.Of(req));
                    if (!res.MsgId.StartsWith("Error:"))
                    {
                        s1ToS2 = true;
                    }
                }
                catch { }
            }

            if (!s2ToS1)
            {
                try
                {
                    var req = new ApiEchoRequest { Content = "HealthCheck" };
                    var res = await s2.ApiSender!.RequestToApi("api-1", CPacket.Of(req));
                    if (!res.MsgId.StartsWith("Error:"))
                    {
                        s2ToS1 = true;
                    }
                }
                catch { }
            }

            if (s1ToS2 && s2ToS1)
            {
                Console.WriteLine("[Program] âœ“ ApiServer ì–‘ë°©í–¥ ì—°ê²° ì™„ë£Œ\n");
                return;
            }

            await Task.Delay(200); // ë¹ ë¥¸ ì¬ì‹œë„
        }

        throw new TimeoutException("ApiServer ì–‘ë°©í–¥ ì—°ê²° ì‹¤íŒ¨");
    }

    static async Task StopServersAsync(ServerContext ctx)
    {
        Console.WriteLine("\n[ì„œë²„ ì¢…ë£Œ ì¤‘...]");
        if (ctx.Connector != null) await ctx.Connector.DisposeAsync();
        if (ctx.HttpApp != null) await ctx.HttpApp.StopAsync();
        if (ctx.DIPlayServer != null) await ctx.DIPlayServer.DisposeAsync();
        if (ctx.PlayServer != null) await ctx.PlayServer.DisposeAsync();
        if (ctx.ApiServer1 != null) await ctx.ApiServer1.DisposeAsync();
        if (ctx.ApiServer2 != null) await ctx.ApiServer2.DisposeAsync();
        // í”„ë¡œí† ì½œ í…ŒìŠ¤íŠ¸ìš© ì„œë²„ ì •ë¦¬
        if (ctx.WebSocketHttpApp != null) await ctx.WebSocketHttpApp.StopAsync();
        if (ctx.TlsPlayServer != null) await ctx.TlsPlayServer.DisposeAsync();
        if (ctx.WebSocketPlayServer != null) await ctx.WebSocketPlayServer.DisposeAsync();
        Console.WriteLine("âœ“ All servers stopped");
    }

    static async Task<int> RunInteractiveMode(ServerContext ctx)
    {
        var runner = new VerificationRunner(ctx);

        while (true)
        {
            Console.Clear();
            PrintMenu(runner);

            var input = Console.ReadLine();
            if (!int.TryParse(input, out var choice))
                continue;

            if (choice == 0) break;

            if (choice == 1)
            {
                var result = await runner.RunAllAsync(verbose: true);
                PrintResults(result);
            }
            else if (choice >= 2)
            {
                var categories = runner.GetCategories();
                var categoryIndex = choice - 2;
                if (categoryIndex < 0 || categoryIndex >= categories.Count)
                {
                    Console.WriteLine("Invalid option");
                    Console.WriteLine("\nPress any key to continue...");
                    Console.ReadKey();
                    continue;
                }
                var category = categories[categoryIndex].Name;
                var result = await runner.RunCategoryAsync(category);
                PrintResults(result);
            }

            Console.WriteLine("\nPress any key to continue...");
            Console.ReadKey();
        }

        return 0;
    }

    static async Task<int> RunAllTests(Config config, ServerContext ctx)
    {
        var runner = new VerificationRunner(ctx);
        var result = await runner.RunAllAsync(verbose: true);

        // ì½˜ì†” ì¶œë ¥
        PrintResults(result);

        // CI ëª¨ë“œë©´ TAP ì¶œë ¥ë„ ìƒì„±
        if (config.TapOutput)
        {
            var tapOutput = new StringBuilder();
            tapOutput.AppendLine($"1..{result.TotalTests}");
            for (int i = 0; i < result.Tests.Count; i++)
            {
                var test = result.Tests[i];
                if (test.Passed)
                {
                    tapOutput.AppendLine($"ok {i + 1} - {test.CategoryName}: {test.TestName}");
                }
                else
                {
                    tapOutput.AppendLine($"not ok {i + 1} - {test.CategoryName}: {test.TestName}");
                    tapOutput.AppendLine($"  # {test.Error}");
                }
            }

            tapOutput.AppendLine($"# {result.PassedCount} tests passed, {result.FailedCount} failed");

            Console.WriteLine("\n" + tapOutput.ToString());

            // TAP íŒŒì¼ ì €ì¥
            var tapFile = Path.Combine(Directory.GetCurrentDirectory(), "verification-results.tap");
            await File.WriteAllTextAsync(tapFile, tapOutput.ToString());
        }

        // Exit code: ì‹¤íŒ¨ ìˆìœ¼ë©´ 1
        return result.FailedCount > 0 ? 1 : 0;
    }

    static async Task<int> RunSelectedCategories(Config config, ServerContext ctx)
    {
        var runner = new VerificationRunner(ctx);
        var result = await runner.RunCategoryAsync(config.Category!);

        // ì½˜ì†” ì¶œë ¥
        PrintResults(result);

        // TAP ì¶œë ¥ ì˜µì…˜
        if (config.TapOutput)
        {
            var tapOutput = new StringBuilder();
            tapOutput.AppendLine($"1..{result.TotalTests}");
            for (int i = 0; i < result.Tests.Count; i++)
            {
                var test = result.Tests[i];
                if (test.Passed)
                {
                    tapOutput.AppendLine($"ok {i + 1} - {test.CategoryName}: {test.TestName}");
                }
                else
                {
                    tapOutput.AppendLine($"not ok {i + 1} - {test.CategoryName}: {test.TestName}");
                    tapOutput.AppendLine($"  # {test.Error}");
                }
            }

            tapOutput.AppendLine($"# {result.PassedCount} tests passed, {result.FailedCount} failed");

            Console.WriteLine("\n" + tapOutput.ToString());
        }

        // Exit code: ì‹¤íŒ¨ ìˆìœ¼ë©´ 1
        return result.FailedCount > 0 ? 1 : 0;
    }

    static void PrintMenu(VerificationRunner runner)
    {
        var categories = runner.GetCategories();
        var totalTests = categories.Sum(c => c.TestCount);

        Console.WriteLine("========================================");
        Console.WriteLine("PlayHouse Verification Program");
        Console.WriteLine("========================================");
        Console.WriteLine($"1. Run All Tests ({totalTests} tests)");

        int index = 2;
        foreach (var category in categories)
        {
            Console.WriteLine($"{index}. {category.Name} ({category.TestCount} tests)");
            index++;
        }

        Console.WriteLine("0. Exit");
        Console.WriteLine("========================================");
        Console.Write("Select option: ");
    }

    static void PrintResults(VerificationResult result)
    {
        Console.WriteLine("\n========================================");
        Console.WriteLine("Test Results");
        Console.WriteLine("========================================");

        foreach (var test in result.Tests)
        {
            var status = test.Passed ? "âœ“" : "âœ—";
            Console.WriteLine($"{status} {test.CategoryName}: {test.TestName} ({test.Duration.TotalMilliseconds:F0}ms)");
            if (!test.Passed)
            {
                Console.WriteLine($"  Error: {test.Error}");
            }
        }

        Console.WriteLine("========================================");
        Console.WriteLine($"Total: {result.TotalTests}, Passed: {result.PassedCount}, Failed: {result.FailedCount}");
    }

    static Config ParseArguments(string[] args)
    {
        bool interactiveMode = false;
        bool tapOutput = false;
        string? category = null;

        for (int i = 0; i < args.Length; i++)
        {
            switch (args[i])
            {
                case "--interactive":
                case "-i":
                    interactiveMode = true;
                    break;
                case "--tap":
                    tapOutput = true;
                    break;
                case "--category":
                    if (i + 1 < args.Length)
                        category = args[++i];
                    break;
            }
        }

        return new Config { InteractiveMode = interactiveMode, TapOutput = tapOutput, Category = category };
    }
}

record Config
{
    public bool InteractiveMode { get; init; }
    public bool TapOutput { get; init; }
    public string? Category { get; init; }
}
